--- a/프로젝트1. 코로나로 큰 타격을 받은 영화관, 코로나로 부상한 OTT서비스_나은.ipynb
+++ b/프로젝트1. 코로나로 큰 타격을 받은 영화관, 코로나로 부상한 OTT서비스_나은.ipynb
@@ -1327,7 +1327,7 @@
    "outputs": [],
    "source": [
     "covid_movie_day = pd.merge(movie_day, day_covid, how=\"inner\", on=\"stateDt\")\n",
-    "covid_movie_day.to_csv(\"일별_영화_코로나.csv\", index=False)"
+    "covid_movie_day.to_csv(\"data/일별_영화_코로나.csv\", index=False)"
    ]
   },
   {
@@ -2708,7 +2708,7 @@
    "execution_count": 72,
    "id": "aa6f5053",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2737,6 +2737,14 @@
     "ax = when_graph.plot(kind=\"barh\", color = [\"dimgray\", \"gray\",\"darkgray\",\"silver\",\"gainsboro\"],\n",
     "                     figsize=(8,6), title=\"연도별 OTT서비스 시청상황 비율\")\n",
     "ax.invert_yaxis()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3374ddb5",
+   "metadata": {},
+   "source": [
+    "OTT서비스는 하루에 여러번 1시간 미만의 짧은 시간동안 이용하는 경우가 많다. 그 이유는 이동 중에 이용하거나 TV가 없는 장소에서 사용하기 때문이라고 볼 수 있다. 즉, OTT서비스는 영상을 짧게 소비하는데 많이 사용된다. "
    ]
   },
   {
